--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Math Blog</title>
+<title>Site de mathématiques</title>
 <link rel="stylesheet" href="styles.css">
+<script src="script.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
+
+
 
 <header>
   <nav>
     <ul>
-      <li><a href="index.html"><span>&#127968;</span> Accueil</a></li>
+      <li><a href="index.html"><span>&#127968;</span><b>Accueil</b></a></li>
       <li class="dropdown">
-        <a href="#" class="dropbtn"><span>&#128290;</span>Exercices</a>
+        <a href="#" class="dropbtn"><span>&#128290;</span><b>Exercices</b></a>
         <div class="dropdown-content">
-          <a href="#" class="sub-topic" data-topic="algebra">Algèbre</a>
-          <a href="#" class="sub-topic" data-topic="calculus">Calculs</a>
+          <a href="#" class="sub-topic" data-topic="algebra"><b>Algèbre</b></a>
+          <a href="#" class="sub-topic" data-topic="calculus"><b>Calculs</b></a>
         </div>
       </li>
     </ul>
   </nav>
 </header>
-
-<script src="script.js"></script>
 </body>
 </html>
