--- a/intégrales.html
+++ b/intégrales.html
@@ -22,6 +22,7 @@
           <a href="#" class="sub-topic" data-topic="calculus"><b>Calculs</b></a>
         </div>
       </li>
+      <li><a href="ressources.html"><span>&#127968;</span><b>Ressources</b></a></li>
     </ul>
   </nav>
 </header>
