--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     </ul>
   </nav>
 </header>
+<main>
+  <h1 style="text-decoration: underline;align-items: center;">Le site est actuellement en travaux, ce qui entraîne des bugs, des manques de pages, de corrections...</h1>
+</main>
 </body>
 </html>
