--- a/espaces-vectoriels.html
+++ b/espaces-vectoriels.html
@@ -72,11 +72,17 @@
             <h2>Études sur la liberté des famille de vecteurs</h2>
             <!-- Exercice 1 - Libre -->
             <div class="exercise-statement">
-              <p><b>Étudier la famille de vecteurs :</b></p>
+              <p><b>Étudier la famille de vecteurs : $$\overrightarrow{u}=\begin{pmatrix}1\\-5\\1\end{pmatrix},\overrightarrow{v}=\begin{pmatrix}-1\\2\\4\end{pmatrix},\overrightarrow{w}=\begin{pmatrix}3\\4\\2\end{pmatrix}$$</b></p>
               <button class="toggle-correction">✔</button>
             </div>
             <div class="exercise-correction hidden">
-              <p></p>
+              <p>Pour commencer, intéressons-nous au caractère libre (ou non) de la famille de vecteurs dans \(\mathbb{R}^3\). Soient \(\alpha ,\beta ,\gamma \in \mathbb{R}\) :</p>
+              <p>$$\alpha \overrightarrow{u} + \beta \overrightarrow{v} + \gamma \overrightarrow{w} = 0_{\mathbb{R}^3} \iff \alpha \begin{pmatrix}1\\-5\\1\end{pmatrix} + \beta \begin{pmatrix}-1\\2\\4\end{pmatrix} + \gamma \begin{pmatrix}3\\4\\2\end{pmatrix} = \begin{pmatrix}0\\0\\0\end{pmatrix} \iff \begin{pmatrix}\alpha \\-5\alpha \\\alpha \end{pmatrix} + \begin{pmatrix}-\beta \\2\beta \\4\beta \end{pmatrix} + \begin{pmatrix}3\gamma \\4\gamma \\2\gamma \end{pmatrix} = \begin{pmatrix}0\\0\\0\end{pmatrix}$$</p>
+              <p>Désormains, il nous reste plus qu'à resoudre le système, si les coefficients sont \(\alpha  ,\beta  ,\gamma \) sont tous égaux à zéro, nous pourrons affirmer que la famille est libre.</p>
+              <p>$$\left\{\begin{array}{rcl}\alpha-\beta+3\gamma&=&0\\-5\alpha+2\beta+4\gamma&=&0 \qquad L_2\gets L_2+5L_1\\\alpha+4\beta+2\gamma&=&0 \qquad L_3\gets L_3+L_1\end{array}\right.$$ $$ \text{ssi} \left\{\begin{array}{rcl}\alpha-\beta+3\gamma&=&0\\-3\beta+19\gamma&=&0 \\3\beta+5\gamma&=&0 \qquad L_3\gets L_3+L_2\end{array}\right.$$ $$ \text{ssi} \left\{\begin{array}{rcl}\alpha-\beta+3\gamma&=&0\\-3\beta+19\gamma&=&0 \\24\gamma&=&0 \end{array}\right.$$</p>
+              <p>Nous pouvons nous arrêter ici, on voit assez aisément que tout les coefficients sont égaux à zéro. Ainsi, on en déduis que la famille est libre.</p>
+              <p>Nous cherchons maintenant à determiner si cette famille est génératrice. Pour cela, nous pouvons réutiliser le système précédent avec des coefficients à la place des zéros dans la partie de droite. Cela conciste à montrer que nous pouvons engender n'importe quel vecteur \((a,b,c) \in \mathbb{R^3}\). Commençons :</p>
+              <p>$$\left\{\begin{array}{rcl}\alpha-\beta+3\gamma&=&a\\-5\alpha+2\beta+4\gamma&=&b \qquad L_2\gets L_2+5L_1\\\alpha+4\beta+2\gamma&=&c \qquad L_3\gets L_3+L_1\end{array}\right.$$ $$ \text{ssi} \left\{\begin{array}{rcl}\alpha-\beta+3\gamma&=&a\\-3\beta+19\gamma&=&5a+b \\3\beta+5\gamma&=&a+c \qquad L_3\gets L_3+L_2\end{array}\right.$$ $$ \text{ssi} \left\{\begin{array}{rcl}\alpha-\beta+3\gamma&=&a\\-3\beta+19\gamma&=&5a+b \\24\gamma&=&a+b+c \end{array}\right.$$</p>
             </div>
             <!-- Exercice 2 - Liée -->
             <div class="exercise-statement">
@@ -88,7 +94,21 @@
             </div>
           </div>
           <!-- Partie 2 - Caractère générateur -->
+          <div class="exercise" id="exercise3.1">
+            <!-- Exercice 2 - Trouver un système générateur -->
+            <h2>Caractère générateur</h2>
+            <div class="exercise-statement">
+              <p><b>Trouver un système générateur du sous-espace vectoriel suivant de \(\mathbb R^3\):</b></p>
+                <p>$$F=\{(x,y,z)\in\mathbb R^3;\ 2x-3y+z=0\textrm{ et }x+2y-3z=0\}$$</p>
+              <button class="toggle-correction">✔</button>
+            </div>
+            <div class="exercise-correction hidden">
+              <p>$$(x,y,z)\in F^3\iff \left\{ \begin{array}{rcl} 2x-3y+z&=&0\\ x+2y-3z&=&0\\ \end{array} \right. \iff \left\{ \begin{array}{rcl} 2x-3y+z&=&0\\ 7y-7z&=&0\\ \end{array} \right.\iff \left\{ \begin{array}{rcl} 2x-3y+z&=&0\\ y&=&z\\ \end{array} \right.\iff \left\{ \begin{array}{rcl} x&=&z\\ y&=&z\\ z&=&z\\ \end{array} \right.$$</p>
+              <p>On trouve donc que \(F = Vect(1,1,1)\) </p>
+            </div>
+
           <!-- Partie 1 - Bases -->
+          
           <!-- Partie 1 - Liberté -->
         </div>
       </div>
