--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 </head>
 <body>
 
-
-
 <header>
   <nav>
     <ul>
@@ -24,12 +22,15 @@
           <a href="#" class="sub-topic" data-topic="calculus"><b>Calculs</b></a>
         </div>
       </li>
-      <li><a href="ressources.html"><span>&#127968;</span><b>Ressources</b></a></li>
+      <li><a href="ressources.html"><span>🗂️</span><b>Ressources</b></a></li>
+      <li><a href="a_propos.html" style="margin-left: 95rem;"><span>❓</span><b>À propos</b></a></li>
     </ul>
   </nav>
 </header>
 <main>
-  <h1 style="text-decoration: underline;align-items: center;">Le site est actuellement en travaux, ce qui entraîne des bugs, des manques de pages, de corrections...</h1>
+  <h1 class="titre">Le site est actuellement en travaux, ce qui entraîne des bugs, des manques de pages, de corrections...</h1>
 </main>
+
+<script src="script.js"></script>
 </body>
 </html>
