--- a/ressources.html
+++ b/ressources.html
@@ -47,9 +47,10 @@
               <div class="exercise">
                 <!-- Concours 1 -->
                 <div class="exercise-container">
-                  <div class="exercise-statement">
-                      <p><b>Concours Tescia</b></p>
-                      <button class="toggle-correction">✔</button>
+                    <div class="exercise-statement">
+                        <p><b>Concours Tescia</b></p>
+                        <img src="img/tescia.png" style="width: 10em; height: auto;">
+                        <button class="toggle-correction">✔</button>
                   </div>
                   <div class="exercise-correction hidden" style="background-color: #0051606e;">
                     <p> <a href="https://www.aores-sci.fr/static/base/pdf/annales/2024/MG2024Enonce.pdf" style="margin-right: 15rem;">Sujet 2024</a>
@@ -75,6 +76,7 @@
                 <div class="exercise-container">
                   <div class="exercise-statement">
                       <p><b>MIT Integration Bee Exam</b></p>
+                      <img src="https://students4students.ch/assets/icons/intbee-logo.png" style="width: 5em; height: auto;">
                       <button class="toggle-correction">✔</button>
                   </div>
                   <div class="exercise-correction hidden" style="background-color: #0051606e;">
@@ -98,6 +100,7 @@
                 <div class="exercise-container">
                   <div class="exercise-statement">
                       <p><b>Putnam</b></p>
+                      <img src="https://users.etown.edu/d/doytchinovb/images/ptnlogo.gif" style="width: 5em; height: auto;">
                       <button class="toggle-correction">✔</button>
                   </div>
                   <div class="exercise-correction hidden" style="background-color: #0051606e;">
