--- a/intégrales.html
+++ b/intégrales.html
@@ -22,7 +22,8 @@
           <a href="#" class="sub-topic" data-topic="calculus"><b>Calculs</b></a>
         </div>
       </li>
-      <li><a href="ressources.html"><span>&#127968;</span><b>Ressources</b></a></li>
+      <li><a href="ressources.html"><span>🗂️</span><b>Ressources</b></a></li>
+      <li><a href="a_propos.html" style="margin-left: 95rem;"><span>❓</span><b>À propos</b></a></li>
     </ul>
   </nav>
 </header>
